--- a/_posts/git/2017-03-05-git-pages.md
+++ b/_posts/git/2017-03-05-git-pages.md
@@ -2,7 +2,7 @@
 layout: blog
 istop: true
 title: "GitHub使用Pages搭建个人博客"
-background-image: assets/20240910163512.jpg
+background-image: ../img/20240910163512.jpg
 date:  2017-03-05 23:45:56
 category: git
 tags:
